fixed footer overlap, styled tabs

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -8,6 +8,14 @@
   font-family: 'RALEWAY', serif, 'Times New Roman', Times, serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: auto;
+	padding-bottom: 50px;
+}
+
 .row {
   display: flex;
   width: 80%;
