--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -7,8 +7,11 @@
 
 /* Footer Styling */
 footer {
-  /* clear: both; */
   height: 40px;
+  position: relative;
+	margin-top: -50px; /* negative value of footer height */
+	height: 50px;
+	clear:both;
   bottom: 0;
   left: 0;
   position: fixed;
