--- a/client/src/components/InternationalPhotos/style.css
+++ b/client/src/components/InternationalPhotos/style.css
@@ -1,15 +1,14 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
   margin: 10px 20px 10px 20px;
+  min-width: 97%;
 }
 
 /* Create three equal columns that sits next to each other */
 .column {
   flex: 33%;
   max-width: 33%;
-  padding: 0 4px;
 }
 
 .column img {
