--- a/client/src/components/Tabs/style.css
+++ b/client/src/components/Tabs/style.css
@@ -1,4 +1,5 @@
-.tab-list {  border-bottom: 1px solid #ccc;
+.tab-list {  
+  border-bottom: 1px solid #ccc;
   padding-left: 0;
 }
 
@@ -10,7 +11,8 @@
 }
 
 .tab-list-active {
-  background-color: white;
-  border: solid #ccc;
-  border-width: 1px 1px 0 1px;
+  background-color: var(--gold);
+  border: solid var(--marroon);
+  border-width: 3px 3px 0 3px;
+  border-bottom: none;
 }
